@@ -3,3 +3,5 @@
 /* General render state. */
 int lrlglSetLineWidth( lua_State *L );
 int lrlglGetLineWidth( lua_State *L );
+/* Initialization functions */
+int lrlglGetVersion( lua_State *L );
